Fix overflow issue

--- a/src/styles/components/scaffolding.scss
+++ b/src/styles/components/scaffolding.scss
@@ -283,7 +283,7 @@ dd {
   margin-right: 1rem;
 }
 
-// Toggle to fix: font-size, margin of details aligned with summary,
+/* Toggle to fix: font-size, margin of details aligned with summary,
 // on hover like hover on article
 
 summary,
@@ -293,8 +293,4 @@ details {
   &:focus {
     outline: none;
   }
-
-  &:hover {
-
-  }
-}
+} */
